package main.controllers;

import main.models.Certificate;

public class RequestCertificateController {
    private void requestCertificate(Course_Name){}
    private String getSummary(){}
    private Certificate generateCertificate(Summary){}
}
