package main.models;

public class Certificate {
    private Name student;
}
