package main.models;

public class Course {
    private  Name student;
    private String summary;
    private Name profesor;

}
